samples/_failures_safe/1761298659_4f116d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73afe7cd.c: In function ‘main’:
./samples/SAFE/__tmp_73afe7cd.c:173: error: expected ‘;’ at end of input
./samples/SAFE/__tmp_73afe7cd.c:172:9: error: expected declaration or statement at end of input
  172 |         return EXIT_FAILURE
      |         ^~~~~~
./samples/SAFE/__tmp_73afe7cd.c:172:9: error: expected declaration or statement at end of input
